--- a/src/components/App.css
+++ b/src/components/App.css
@@ -26,12 +26,15 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  min-height: 96vh;
   margin: 0 auto;
+  min-height: 96vh;
   min-width: 320px;
   overflow: hidden;
   max-width: 1024px;
   border-radius: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -63,6 +66,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   padding: 15px;
+  max-width: 565px;
   border-radius: 10px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -81,7 +85,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  max-width: 425px;
   position: relative;
 }
 
@@ -181,11 +184,13 @@ body {
 }
 
 .mainMoneyTimerContainer {
+  width: 100%;
+  color: #525252;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   padding: 15px;
-  color: #525252;
+  max-width: 565px;
   margin-top: 20px;
   position: relative;
   -webkit-box-align: center;
@@ -203,7 +208,6 @@ body {
 
 .mainMoneyTimerContainer .stopStartContainer {
   width: 100%;
-  max-width: 425px;
   position: relative;
 }
 
@@ -226,6 +230,17 @@ body {
   color: #ff1400;
   position: absolute;
   background-color: #f0f0f0;
+}
+
+.mainMoneyTimerContainer .stopStartContainer .enterHourlyRateWarning {
+  top: -2px;
+  left: 0;
+  color: #ff1400;
+  position: absolute;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: #fafafa;
+  border: 2px solid #ff1400;
 }
 
 .mainMoneyTimerContainer .timerDisplay {
@@ -290,13 +305,14 @@ body {
   }
 }
 
-@media (min-width: 800px) {
+@media (min-width: 900px) {
   .inputAndStatsContainer,
   .mainMoneyTimerContainer {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    max-width: 100%;
     padding: 30px;
   }
   .inputAndStatsContainer .valueBreakdown,
