--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -30,12 +30,13 @@ body {
 .container {
   padding: 20px;
   display: flex;
-  min-height: 96vh;
   margin: 0 auto;
+  min-height: 96vh;
   min-width: 320px;
   overflow: hidden;
   max-width: 1024px;
   border-radius: 10px;
+  align-items: center;
   flex-direction: column;
   box-sizing: border-box;
 
@@ -61,6 +62,7 @@ body {
   width: 100%;
   display: flex;
   padding: 15px;
+  max-width: 565px;
   border-radius: 10px;
   align-items: center;
   flex-direction: column;
@@ -70,7 +72,7 @@ body {
   form {
     width: 100%;
     display: flex;
-    max-width: 425px;
+    // max-width: 425px;
     position: relative;
 
     .mainTimerWarning {
@@ -164,9 +166,11 @@ body {
 }
 
 .mainMoneyTimerContainer {
+  width: 100%;
+  color: $dark;
   display: flex;
   padding: 15px;
-  color: $dark;
+  max-width: 565px;
   margin-top: 20px;
   position: relative;
   align-items: center;
@@ -177,7 +181,7 @@ body {
 
   .stopStartContainer {
     width: 100%;
-    max-width: 425px;
+    // max-width: 425px;
     position: relative;
 
     button {
@@ -199,6 +203,16 @@ body {
       color: $warning;
       position: absolute;
       background-color: $lightGrey;
+    }
+
+    .enterHourlyRateWarning {
+      top: -2px;
+      left: 0;
+      color: $warning;
+      position: absolute;
+      box-sizing: border-box;
+      background-color: $light;
+      border: 2px solid $warning;
     }
   }
 
@@ -270,10 +284,11 @@ body {
     }
   }
 }
-@media (min-width: 800px) {
+@media (min-width: 900px) {
   .inputAndStatsContainer,
   .mainMoneyTimerContainer {
     flex-direction: row;
+    max-width: 100%;
     padding: 30px;
 
     .valueBreakdown,
