--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,5 @@
 .responsiveFont, .dollarSign:before, .inputAndStatsContainer .valueBreakdown, .mainMoneyTimerContainer .bottomRow .timerDisplay, .mainMoneyTimerContainer .bottomRow .resetButton {
-  font-size: 0.7em;
+  font-size: 0.8em;
 }
 
 .mediumResponsiveFont, .inputAndStatsContainer form .mainTimerWarning, .inputAndStatsContainer form div input, .inputAndStatsContainer form div .errorMessage, .inputAndStatsContainer form button, .mainMoneyTimerContainer .topRow .stopStartContainer button {
@@ -270,34 +270,32 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 30px;
+  padding: 10px;
+  margin-top: 20px;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
-.mainMoneyTimerContainer .bottomRow .timerDisplay {
-  padding: 0 10px;
-}
-
 .mainMoneyTimerContainer .bottomRow .resetButton {
   outline: none;
   color: #ff1400;
-  padding: 0 10px;
   border-style: none;
   font-family: "Montserrat", sans-serif;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-color: #fafafa;
+  background-color: transparent;
 }
 
 @media (min-width: 360px) {
   .responsiveFont, .dollarSign:before, .inputAndStatsContainer .valueBreakdown, .mainMoneyTimerContainer .bottomRow .timerDisplay, .mainMoneyTimerContainer .bottomRow .resetButton {
-    font-size: 0.8em;
+    font-size: 0.9em;
   }
   .mediumResponsiveFont, .inputAndStatsContainer form .mainTimerWarning, .inputAndStatsContainer form div input, .inputAndStatsContainer form div .errorMessage, .inputAndStatsContainer form button, .mainMoneyTimerContainer .topRow .stopStartContainer button {
     font-size: 1em;
@@ -320,7 +318,7 @@ body {
 
 @media (min-width: 425px) {
   .responsiveFont, .dollarSign:before, .inputAndStatsContainer .valueBreakdown, .mainMoneyTimerContainer .bottomRow .timerDisplay, .mainMoneyTimerContainer .bottomRow .resetButton {
-    font-size: 1em;
+    font-size: 1.1em;
   }
   .mediumResponsiveFont, .inputAndStatsContainer form .mainTimerWarning, .inputAndStatsContainer form div input, .inputAndStatsContainer form div .errorMessage, .inputAndStatsContainer form button, .mainMoneyTimerContainer .topRow .stopStartContainer button {
     font-size: 1.2em;
