--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -2,12 +2,20 @@
   font-size: 0.8em;
 }
 
-.mediumResponsiveFont, .inputAndStatsContainer form .mainTimerWarning, .inputAndStatsContainer form div input, .inputAndStatsContainer form div .errorMessage, .inputAndStatsContainer form button, .mainMoneyTimerContainer .topRow .stopStartContainer button {
+.mediumResponsiveFont, .inputAndStatsContainer form .mainTimerWarning, .inputAndStatsContainer form div input, .inputAndStatsContainer form div .errorMessage, .inputAndStatsContainer form button, .mainMoneyTimerContainer .topRow .stopStartContainer button, html .modalBackground .modalContainer .modalMessage, html .modalBackground .modalContainer .modalButtonContainer .modalCancel, html .modalBackground .modalContainer .modalButtonContainer .modalConfirm {
   font-size: 0.9em;
 }
 
 .LargeResponsiveFont, .mainMoneyTimerContainer .topRow .mainMoneyTimerDisplay {
   font-size: 1.7em;
+}
+
+.buttonBaseStyle, .inputAndStatsContainer form button, .mainMoneyTimerContainer .topRow .stopStartContainer button, .mainMoneyTimerContainer .bottomRow .resetButton, html .modalBackground .modalContainer .modalButtonContainer .modalCancel, html .modalBackground .modalContainer .modalButtonContainer .modalConfirm {
+  outline: none;
+  border-style: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 
 .hide {
@@ -30,6 +38,7 @@ body {
   min-height: 96vh;
   min-width: 320px;
   overflow: hidden;
+  min-height: 576px;
   max-width: 1024px;
   border-radius: 10px;
   -webkit-box-align: center;
@@ -91,7 +100,6 @@ body {
 .inputAndStatsContainer form .mainTimerWarning {
   top: 0;
   left: 0;
-  z-index: 1;
   width: 100%;
   padding: 20px;
   color: #ff1400;
@@ -150,13 +158,8 @@ body {
 
 .inputAndStatsContainer form button {
   width: 30%;
-  outline: none;
   color: #525252;
   padding: 20px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
-  border-style: none;
   background-color: #e4e4e4;
   border-radius: 0 10px 10px 0;
 }
@@ -227,14 +230,9 @@ body {
 
 .mainMoneyTimerContainer .topRow .stopStartContainer button {
   width: 100%;
-  outline: none;
   padding: 20px;
   color: #525252;
-  border-style: none;
   border-radius: 10px;
-  font-family: "Montserrat", sans-serif;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   background-color: #e4e4e4;
 }
 
@@ -284,20 +282,113 @@ body {
 }
 
 .mainMoneyTimerContainer .bottomRow .resetButton {
-  outline: none;
   color: #ff1400;
-  border-style: none;
-  font-family: "Montserrat", sans-serif;
+  background-color: transparent;
+}
+
+html {
+  height: 100%;
+  min-width: 320px;
+  min-height: 576px;
+  position: relative;
+}
+
+html .modalBackground {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+html .modalBackground .modalContainer {
+  width: 90%;
+  height: 40%;
+  padding: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 100px;
+  max-width: 500px;
+  max-height: 250px;
+  border-radius: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background-color: transparent;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #fafafa;
+  -webkit-box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.5);
+          box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.5);
+}
+
+html .modalBackground .modalContainer .modalMessage {
+  height: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+html .modalBackground .modalContainer .modalButtonContainer {
+  height: 50%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+html .modalBackground .modalContainer .modalButtonContainer .modalCancel {
+  width: 45%;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #f0f0f0;
+}
+
+html .modalBackground .modalContainer .modalButtonContainer .modalConfirm {
+  width: 45%;
+  padding: 20px;
+  color: #ff1400;
+  border-radius: 10px;
+  border: 2px solid #ff1400;
+  background-color: #fafafa;
 }
 
 @media (min-width: 360px) {
   .responsiveFont, .dollarSign:before, .inputAndStatsContainer .valueBreakdown, .mainMoneyTimerContainer .bottomRow .timerDisplay, .mainMoneyTimerContainer .bottomRow .resetButton {
     font-size: 0.9em;
   }
-  .mediumResponsiveFont, .inputAndStatsContainer form .mainTimerWarning, .inputAndStatsContainer form div input, .inputAndStatsContainer form div .errorMessage, .inputAndStatsContainer form button, .mainMoneyTimerContainer .topRow .stopStartContainer button {
+  .mediumResponsiveFont, .inputAndStatsContainer form .mainTimerWarning, .inputAndStatsContainer form div input, .inputAndStatsContainer form div .errorMessage, .inputAndStatsContainer form button, .mainMoneyTimerContainer .topRow .stopStartContainer button, html .modalBackground .modalContainer .modalMessage, html .modalBackground .modalContainer .modalButtonContainer .modalCancel, html .modalBackground .modalContainer .modalButtonContainer .modalConfirm {
     font-size: 1em;
   }
   .dollarSign:before {
@@ -320,7 +411,7 @@ body {
   .responsiveFont, .dollarSign:before, .inputAndStatsContainer .valueBreakdown, .mainMoneyTimerContainer .bottomRow .timerDisplay, .mainMoneyTimerContainer .bottomRow .resetButton {
     font-size: 1.1em;
   }
-  .mediumResponsiveFont, .inputAndStatsContainer form .mainTimerWarning, .inputAndStatsContainer form div input, .inputAndStatsContainer form div .errorMessage, .inputAndStatsContainer form button, .mainMoneyTimerContainer .topRow .stopStartContainer button {
+  .mediumResponsiveFont, .inputAndStatsContainer form .mainTimerWarning, .inputAndStatsContainer form div input, .inputAndStatsContainer form div .errorMessage, .inputAndStatsContainer form button, .mainMoneyTimerContainer .topRow .stopStartContainer button, html .modalBackground .modalContainer .modalMessage, html .modalBackground .modalContainer .modalButtonContainer .modalCancel, html .modalBackground .modalContainer .modalButtonContainer .modalConfirm {
     font-size: 1.2em;
   }
   .LargeResponsiveFont, .mainMoneyTimerContainer .topRow .mainMoneyTimerDisplay {
