--- a/src/CSS/App.scss
+++ b/src/CSS/App.scss
@@ -16,6 +16,13 @@ $warning: rgb(255, 20, 0);
   font-size: 1.7em;
 }
 
+.buttonBaseStyle {
+  outline: none;
+  border-style: none;
+  box-sizing: border-box;
+  font-family: $mainFont;
+}
+
 .hide {
   visibility: hidden;
 }
@@ -31,14 +38,15 @@ body {
   padding: 20px;
   display: flex;
   margin: 0 auto;
-  min-height: 96vh;
-  min-width: 320px;
   overflow: hidden;
+  min-width: 320px;
+  min-height: 96vh;
+  min-height: 576px;
   max-width: 1024px;
-  border-radius: 10px;
   align-items: center;
-  flex-direction: column;
+  border-radius: 10px;
   box-sizing: border-box;
+  flex-direction: column;
 
   h1 {
     color: $light;
@@ -78,7 +86,6 @@ body {
     .mainTimerWarning {
       top: 0;
       left: 0;
-      z-index: 1;
       width: 100%;
       padding: 20px;
       color: $warning;
@@ -136,17 +143,15 @@ body {
         @extend .mediumResponsiveFont;
       }
     }
+
     button {
       width: 30%;
-      outline: none;
       color: $dark;
       padding: 20px;
-      box-sizing: border-box;
-      font-family: $mainFont;
-      border-style: none;
       background-color: $mediumGrey;
       border-radius: 0 10px 10px 0;
       @extend .mediumResponsiveFont;
+      @extend .buttonBaseStyle;
     }
   }
 
@@ -192,15 +197,12 @@ body {
 
       button {
         width: 100%;
-        outline: none;
         padding: 20px;
         color: $dark;
-        border-style: none;
         border-radius: 10px;
-        font-family: $mainFont;
-        box-sizing: border-box;
         background-color: $mediumGrey;
         @extend .mediumResponsiveFont;
+        @extend .buttonBaseStyle;
       }
 
       .stopButton {
@@ -245,13 +247,83 @@ body {
     }
 
     .resetButton {
-      outline: none;
       color: $warning;
-      border-style: none;
-      font-family: $mainFont;
-      box-sizing: border-box;
       background-color: transparent;
+      @extend .buttonBaseStyle;
       @extend .responsiveFont;
+    }
+  }
+}
+
+html {
+  height: 100%;
+  min-width: 320px;
+  min-height: 576px;
+  position: relative;
+
+  .modalBackground {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.7);
+
+    .modalContainer {
+      width: 90%;
+      height: 40%;
+      padding: 30px;
+      display: flex;
+      margin-top: 100px;
+      max-width: 500px;
+      max-height: 250px;
+      border-radius: 10px;
+      align-items: center;
+      box-sizing: border-box;
+      flex-direction: column;
+      justify-content: center;
+      background-color: $light;
+      box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.5);
+
+      .modalMessage {
+        height: 50%;
+        display: flex;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        @extend .mediumResponsiveFont;
+      }
+
+      .modalButtonContainer {
+        width: 100%;
+        height: 50%;
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        justify-content: space-between;
+
+        .modalCancel {
+          width: 45%;
+          padding: 20px;
+          border-radius: 10px;
+          background-color: $lightGrey;
+          @extend .mediumResponsiveFont;
+          @extend .buttonBaseStyle;
+        }
+
+        .modalConfirm {
+          width: 45%;
+          padding: 20px;
+          color: $warning;
+          border-radius: 10px;
+          border: 2px solid $warning;
+          background-color: $light;
+          @extend .mediumResponsiveFont;
+          @extend .buttonBaseStyle;
+        }
+      }
     }
   }
 }
