--- a/src/CSS/App.scss
+++ b/src/CSS/App.scss
@@ -15,23 +15,28 @@ $warning: rgb(255, 20, 0);
 .LargeResponsiveFont {
   font-size: 1.7em;
 }
-
 .buttonBaseStyle {
   outline: none;
   border-style: none;
   box-sizing: border-box;
   font-family: $mainFont;
 }
-
 .hide {
   visibility: hidden;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  background-color: $dark;
-  font-family: $mainFont;
+html {
+  height: 100%;
+  min-width: 320px;
+  min-height: 576px;
+  position: relative;
+
+  body {
+    margin: 0;
+    padding: 0;
+    background-color: $dark;
+    font-family: $mainFont;
+  }
 }
 
 .container {
@@ -57,12 +62,13 @@ body {
 
 .dollarSign {
   position: relative;
+
   &:before {
-    @extend .responsiveFont;
-    position: absolute;
     top: 3px;
-    content: '$';
     left: 10px;
+    content: '$';
+    position: absolute;
+    @extend .responsiveFont;
   }
 }
 
@@ -80,7 +86,6 @@ body {
   form {
     width: 100%;
     display: flex;
-    // max-width: 425px;
     position: relative;
 
     .mainTimerWarning {
@@ -128,11 +133,11 @@ body {
         left: 0;
         width: 100%;
         padding: 20px;
+        color: $warning;
         position: absolute;
         text-align: right;
         pointer-events: none;
         box-sizing: border-box;
-        color: $warning;
         border-radius: 10px 0 0 10px;
         border: 2px solid $warning;
         background: linear-gradient(
@@ -179,150 +184,136 @@ body {
   margin-top: 20px;
   position: relative;
   align-items: center;
-  border-radius: 10px;
+  border-radius: 10px 10px 0 0;
   flex-direction: column;
   box-sizing: border-box;
   background-color: $light;
 
-  .topRow {
+  .stopStartContainer {
     width: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+    position: relative;
 
-    .stopStartContainer {
+    button {
       width: 100%;
-      // max-width: 425px;
-      position: relative;
+      padding: 20px;
+      color: $dark;
+      border-radius: 10px;
+      background-color: $mediumGrey;
+      @extend .mediumResponsiveFont;
+      @extend .buttonBaseStyle;
+    }
 
-      button {
-        width: 100%;
+    .stopButton {
+      top: 0;
+      left: 0;
+      color: $warning;
+      position: absolute;
+      background-color: $lightGrey;
+    }
+
+    .enterHourlyRateWarning {
+      top: -2px;
+      left: 0;
+      color: $warning;
+      position: absolute;
+      box-sizing: border-box;
+      background-color: $light;
+      border: 2px solid $warning;
+    }
+  }
+  .mainMoneyTimerDisplay {
+    text-align: center;
+    margin: 40px 0 25px 0;
+    box-sizing: border-box;
+    @extend .LargeResponsiveFont;
+  }
+}
+
+.mainTimerDisplayContainer {
+  width: 100%;
+  color: $dark;
+  display: flex;
+  max-width: 565px;
+  padding: 15px 20px;
+  flex-direction: row;
+  box-sizing: border-box;
+  background-color: $lightGrey;
+  border-radius: 0 0 10px 10px;
+  justify-content: space-between;
+
+  .timerDisplay {
+    @extend .responsiveFont;
+  }
+
+  .resetButton {
+    color: $warning;
+    background-color: transparent;
+    @extend .buttonBaseStyle;
+    @extend .responsiveFont;
+  }
+}
+
+.modalBackground {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.7);
+
+  .modalContainer {
+    width: 90%;
+    height: 40%;
+    padding: 30px;
+    display: flex;
+    margin-top: 100px;
+    max-width: 500px;
+    max-height: 250px;
+    border-radius: 10px;
+    align-items: center;
+    box-sizing: border-box;
+    flex-direction: column;
+    justify-content: center;
+    background-color: $light;
+    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.5);
+
+    .modalMessage {
+      height: 50%;
+      display: flex;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      @extend .mediumResponsiveFont;
+    }
+
+    .modalButtonContainer {
+      width: 100%;
+      height: 50%;
+      display: flex;
+      align-items: center;
+      flex-direction: row;
+      justify-content: space-between;
+
+      .modalCancel {
+        width: 45%;
         padding: 20px;
-        color: $dark;
         border-radius: 10px;
-        background-color: $mediumGrey;
+        background-color: $lightGrey;
         @extend .mediumResponsiveFont;
         @extend .buttonBaseStyle;
       }
 
-      .stopButton {
-        top: 0;
-        left: 0;
+      .modalConfirm {
+        width: 45%;
+        padding: 20px;
         color: $warning;
-        position: absolute;
-        background-color: $lightGrey;
-      }
-
-      .enterHourlyRateWarning {
-        top: -2px;
-        left: 0;
-        color: $warning;
-        position: absolute;
-        box-sizing: border-box;
-        background-color: $light;
+        border-radius: 10px;
         border: 2px solid $warning;
-      }
-    }
-
-    .mainMoneyTimerDisplay {
-      text-align: center;
-      margin: 40px 0 25px 0;
-      box-sizing: border-box;
-      @extend .LargeResponsiveFont;
-    }
-  }
-
-  .bottomRow {
-    width: 100%;
-    color: $dark;
-    display: flex;
-    padding: 10px;
-    margin-top: 20px;
-    flex-direction: row;
-    box-sizing: border-box;
-    justify-content: space-between;
-
-    .timerDisplay {
-      @extend .responsiveFont;
-    }
-
-    .resetButton {
-      color: $warning;
-      background-color: transparent;
-      @extend .buttonBaseStyle;
-      @extend .responsiveFont;
-    }
-  }
-}
-
-html {
-  height: 100%;
-  min-width: 320px;
-  min-height: 576px;
-  position: relative;
-
-  .modalBackground {
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    position: absolute;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, 0.7);
-
-    .modalContainer {
-      width: 90%;
-      height: 40%;
-      padding: 30px;
-      display: flex;
-      margin-top: 100px;
-      max-width: 500px;
-      max-height: 250px;
-      border-radius: 10px;
-      align-items: center;
-      box-sizing: border-box;
-      flex-direction: column;
-      justify-content: center;
-      background-color: $light;
-      box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.5);
-
-      .modalMessage {
-        height: 50%;
-        display: flex;
-        text-align: center;
-        align-items: center;
-        justify-content: center;
+        background-color: $light;
         @extend .mediumResponsiveFont;
-      }
-
-      .modalButtonContainer {
-        width: 100%;
-        height: 50%;
-        display: flex;
-        align-items: center;
-        flex-direction: row;
-        justify-content: space-between;
-
-        .modalCancel {
-          width: 45%;
-          padding: 20px;
-          border-radius: 10px;
-          background-color: $lightGrey;
-          @extend .mediumResponsiveFont;
-          @extend .buttonBaseStyle;
-        }
-
-        .modalConfirm {
-          width: 45%;
-          padding: 20px;
-          color: $warning;
-          border-radius: 10px;
-          border: 2px solid $warning;
-          background-color: $light;
-          @extend .mediumResponsiveFont;
-          @extend .buttonBaseStyle;
-        }
+        @extend .buttonBaseStyle;
       }
     }
   }
@@ -332,9 +323,11 @@ html {
   .responsiveFont {
     font-size: 0.9em;
   }
+
   .mediumResponsiveFont {
     font-size: 1em;
   }
+
   .dollarSign {
     &:before {
       top: 2px;
@@ -342,10 +335,15 @@ html {
   }
 }
 @media (min-width: 375px) {
+  .mainTimerDisplayContainer {
+    padding: 15px 30px;
+  }
+
   .inputAndStatsContainer,
   .mainMoneyTimerContainer {
     padding: 25px;
   }
+
   .valueBreakdown,
   .mainMoneyTimerDisplay {
     margin: 30px 0 15px 0;
@@ -355,17 +353,21 @@ html {
   .responsiveFont {
     font-size: 1.1em;
   }
+
   .mediumResponsiveFont {
     font-size: 1.2em;
   }
+
   .LargeResponsiveFont {
     font-size: 2em;
   }
+
   .dollarSign {
     &:before {
       top: 0;
     }
   }
+
   .inputAndStatsContainer,
   .mainMoneyTimerContainer {
     form {
@@ -380,9 +382,11 @@ html {
     flex-direction: row;
     max-width: 100%;
     padding: 30px;
+
     form {
       width: 40%;
     }
+
     .valueBreakdown {
       margin: 0;
       width: 60%;
@@ -390,17 +394,22 @@ html {
   }
 
   .mainMoneyTimerContainer {
-    max-width: 100%;
     padding: 30px;
-    .topRow {
-      flex-direction: row;
-      .stopStartContainer {
-        width: 40%;
-      }
-      .mainMoneyTimerDisplay {
-        margin: 0;
-        width: 60%;
-      }
+    max-width: 100%;
+    flex-direction: row;
+
+    .stopStartContainer {
+      width: 40%;
     }
+
+    .mainMoneyTimerDisplay {
+      margin: 0;
+      width: 60%;
+    }
+  }
+
+  .mainTimerDisplayContainer {
+    max-width: 100%;
+    padding: 15px 35px;
   }
 }
